CC Notice content update

--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -316,14 +316,14 @@
                 <div class="w-80">
                     <p>
                         <span class="bold">Why use these Notices?</span><br>
-                        The Collections Care (CC) Notices are used to recognize the cultural protocols that govern the care, display, and access to cultural materials. The CC Notices recognize that there are accompanying cultural rights, protocols, and responsibilities that govern the care, display, and access to cultural materials within collections. This reflects Indigenous sensibilities and worldviews where these collections are not objects but need to be cared for as relatives and relations.
+                        The Collections Care (CC) Notices are visible identifiers developed specifically for institutions and repositories to support proper cultural care and stewardship of collections, led and guided by Indigenous protocols and authority.
                         <br><br>
-                        These Notices can be applied after engaging with community-specific Indigenous experts to determine the culturally appropriate care and governance for relatives and relations held in the collections.
-                    </p>
+                        The CC Notices recognize that there are accompanying cultural rights, protocols, and responsibilities that govern the care, display, and access to cultural materials within collections. This reflects Indigenous sensibilities and worldviews where these collections are not objects but need to be cared for as relatives and relations.
+                        <br><br>
+                        These Notices can be applied after engaging with Indigenous community authorities to determine the culturally appropriate care and governance for relatives and relations held in the collections.                    </p>
                     <p>
                         <span class="bold">Where can I use these Notices?</span><br>
-                        The CC Notices are for implementation by institutions and repositories internally and directly on collections in storage spaces and databases as well as within policy, workflows, and practices surrounding the care and stewardship of these important collections. The CC Notices can be used in print and digital formats.
-                    </p>
+                        The CC Notices are for implementation by institutions and repositories internally and directly on collections in storage spaces and databases as well as within policy, workflows, and practices surrounding the care and stewardship of these important collections. The CC Notices can be used in print and digital formats.                    </p>
                     <p>
                         <span class="bold">How can I use these Notices?</span><br>
                         Within the downloaded zip file are folders for each Notice containing its text, png, svg, QR code, and printable labels. Also included in the zip file is a poster with the Overall Notice. For transparency and staff awareness, we highly recommend that the poster with the Overall Notice is displayed in collections storage where the CC Notices are in use.
