Change redirect from apply-labels to Project actions #labels header on Label application

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -1225,6 +1225,8 @@
     </div>
 {% endif %}
 
+{% include 'partials/_alerts.html' %}
+
 <script>
     var notification_count = {{ subscription.notification_count }};
 </script>
