--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -1290,7 +1290,10 @@ i[data-tooltip]:hover:after {
 }
 
 .label-group:last-child:last-of-type { margin-bottom: 16px;}
-.border-bottom-not-last:not(:last-child) { border-bottom: 1px solid #C4C4C4; }
+.border-bottom-not-last:not(:last-child) {
+    border-bottom: 1px solid #C4C4C4;
+    padding-bottom: 16px;
+}
 
 .actions-card a {
     margin: 8px 16px;
