--- a/templates/account_settings_pages/_subscription.html
+++ b/templates/account_settings_pages/_subscription.html
@@ -18,7 +18,7 @@
   {% elif subscription is None  %}    
   <p class='red-text'>To unlock more activities in your account please subscribe</p>
   <div>
-    <a href="{% if institution %}{% url 'institution-create-subscription-form' institution.id  %}{% else %}{% url 'subscription' researcher.id 'researcher' %}{% endif %}">
+    <a href="{% if institution %}{% url 'institution-create-subscription-form' institution.id  %}{% else %}{% url 'researcher-create-subscription-form' researcher.id %}{% endif %}">
       <button type="submit" class="primary-btn action-btn" name="generatebtn">Fill out Subscription Form</button>
     </a>
   </div> 
