Updated loading spinner

--- a/templates/account_settings_pages/_subscription-form.html
+++ b/templates/account_settings_pages/_subscription-form.html
@@ -88,7 +88,7 @@
                     <button id="createSubscription" class="primary-btn action-btn mt-2p">
                       Continue <i class="fa fa-arrow-right"></i>
                     </button>
-                    <div id="loading-spinner" class="primary-btn action-btn mt-2p hide {% if institution %} disabled-btn {% endif %}">
+                    <div id="loading-spinner" class="primary-btn action-btn mt-2p hide disabled-btn">
                       Continue <i class="fa fa-arrow-right"></i>
                       <i class="fa spinner-container fa-spinner fa-spin fa-2x spinner "></i>
                     </div>
