--- a/templates/account_settings_pages/_update-account.html
+++ b/templates/account_settings_pages/_update-account.html
@@ -86,7 +86,7 @@
 
     <!-- Description -->
     <div class="w-100 mb-8">
-        {{ update_form.description.label }} <br>
+        {{ update_form.description.label }}<span class="orange-text required-label" title="">*</span><br>
         {{ update_form.description }}
         {% if update_form.description.errors %}
             <div class="msg-red w-80"><small>{{ update_form.description.errors.as_text }}</small></div>
@@ -119,9 +119,11 @@
     <!-- Website -->
     <div class="mb-8">
         {{ update_form.website.label }}
-        <div class="tooltip"><strong>i</strong>
-            <span class="tooltiptext">A link to your platform's website</span>
-        </div>
+        {% if service_provider %}
+            <div class="tooltip"><strong>i</strong>
+                <span class="tooltiptext">A link to your platform's website</span>
+            </div>
+        {% endif %}
         <br>
         {{ update_form.website }}
         {% if update_form.website.errors %}
