update non-required fields and change inquiry type to subscription type in account creation forms

--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="mt-8 w-100 flex-this">
-            <div class="w-50 mr-1p">
+            <div class="w-100 mr-1p">
                 <label class="pad-top-1-5" for="country">Country</label><br>
                 {{ form.country }}
             </div>
@@ -79,12 +79,12 @@
         </div>
         <div class="w-100">
             <div class="pad-top-1-5 radio-group mb-1p">
-                <label for="inquiry_type" class="inquiry-label">Inquiry Type<span class="orange-text required-label" title="">*</span></label>
+                <label for="inquiry_type" class="inquiry-label">Subscription Type<span class="orange-text required-label" title="">*</span></label>
                 <div class="tooltip"><strong>i</strong>
-                    <span class="tooltiptext">An institution inquiry type allows you to select the desired role for the subscription process.</span>
+                    <span class="tooltiptext">An institution subscription type allows you to select the desired role for the subscription process.</span>
                 </div>
                 <br>
-                <div class="flex-this row ">
+                <div class="flex-this row">
                     <label class="radio-container w-50 mt-2p">
                         <input class="pointer" type="radio" name="inquiry_type" value="Subscription">
                         <span class="ml-5">Subscription</span>
