--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -86,9 +86,9 @@
         </div>
         <div class="w-100">
             <div class="pad-top-1-5 radio-group mb-1p">
-                <label for="inquiry_type" class="inquiry-label">Inquiry Type<span class="orange-text required-label" title="">*</span></label>
+                <label for="inquiry_type" class="inquiry-label">Subscription Type<span class="orange-text required-label" title="">*</span></label>
                 <div class="tooltip"><strong>i</strong>
-                    <span class="tooltiptext">An institution inquiry type allows you to select the desired role for the subscription process.</span>
+                    <span class="tooltiptext">An institution subscription type allows you to select the desired role for the subscription process.</span>
                 </div>
                 <br>
                 <div class="flex-this row ">
