--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -24,7 +24,8 @@
       </div>
       <div>
         <p class="dashcard-subheader">
-          Researcher | Location: {{ researcher.user.user_profile.get_location }}
+          Researcher
+          {% with researcher.user.user_profile.get_location as location %}{% if location %} | Location: {{ location }}{% endif %}{% endwith %}
         </p>
       </div>
       <div>
