#8689un2kg: More info button icon changed to external link indicator

--- a/templates/account_settings_pages/_connect-service-provider.html
+++ b/templates/account_settings_pages/_connect-service-provider.html
@@ -105,7 +105,7 @@
                             href="{{ service_provider.documentation }}"
                             target="_blank"
                         >
-                            More Info <i class="fa fa-arrow-right"></i>
+                            More Info <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
                         </a>
                     {% endif %}
                 {% else %}
@@ -126,7 +126,7 @@
                             href="{{ service_provider.documentation }}"
                             target="_blank"
                         >
-                            More Info <i class="fa fa-arrow-right"></i>
+                            More Info <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
                         </a>
                     {% endif %}
                 {% endif %}
