--- a/templates/public.html
+++ b/templates/public.html
@@ -96,10 +96,25 @@
                         <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Active"></i>
                     {% endif %}
                 </div>
-                <div>
-                    <p class="dashcard-subheader">Community {% with community.get_location as location %}{% if location %} | Location: {{ location }}{% endif %}{% endwith %}</p>
-                </div>
-                <div><p class="dashcard-description description-sm">{% if community.description %}{{ community.description }}{% else %} No description provided. {% endif %}</p></div>
+                <p class="dashcard-subheader">
+                    Community {% with community.get_location as location %}{% if location %} | Location: {{ location }}{% endif %}{% endwith %}
+                </p>
+                <p class="dashcard-description description-sm">
+                    {% if community.description %}{{ community.description }}{% else %} No description provided.{% endif %}
+                </p>
+                {% if community.website %}
+                    <div class="flex-this mt-8 description-sm">
+                        <p class="mt-0 mb-0 mr-16">
+                            <i class="fa-solid fa-globe" title="Website"></i>
+                            <a
+                                class="default-a ml-5"
+                                href="{{ community.website }}"
+                            >
+                                {{ community.community_name }} Website
+                            </a>
+                        </p>
+                    </div>
+                {% endif %}
 
                 {% include 'partials/_alerts.html' %}
 
@@ -237,10 +252,25 @@
                         <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
                     {% endif %}
                 </div>
-                <div>
-                    <p class="dashcard-subheader">Institution {% with institution.get_location as location %}{% if location %} | Location: {{ location }}{% endif %}{% endwith %}</p>
-                </div>
-                <div><p class="dashcard-description description-sm">{% if institution.description %}{{ institution.description }}{% else %} No description provided. {% endif %}</p></div>
+                <p class="dashcard-subheader">
+                    Institution {% with institution.get_location as location %}{% if location %} | Location: {{ location }}{% endif %}{% endwith %}
+                </p>
+                <p class="dashcard-description description-sm">
+                    {% if institution.description %}{{ institution.description }}{% else %} No description provided.{% endif %}
+                </p>
+                {% if institution.website %}
+                    <div class="flex-this mt-8 description-sm">
+                        <p class="mt-0 mb-0 mr-16">
+                            <i class="fa-solid fa-globe" title="Website"></i>
+                            <a
+                                class="default-a ml-5"
+                                href="{{ institution.website }}"
+                            >
+                                {{ institution.institution_name }} Website
+                            </a>
+                        </p>
+                    </div>
+                {% endif %}
 
                 {% include 'partials/_alerts.html' %}
             </div>
@@ -358,7 +388,7 @@
                 <p class="dashcard-description description-sm">
                     {% if service_provider.description %}{{ service_provider.description }}{% else %}No description provided.{% endif %}
                 </p>
-                {% if service_provider.website or service_provider.documentation%}
+                {% if service_provider.website or service_provider.documentation %}
                     <div class="flex-this mt-8 description-sm">
                         {% if service_provider.website %}
                             <p class="mt-0 mb-0 mr-16">
@@ -367,7 +397,7 @@
                                     class="default-a ml-5"
                                     href="{{ service_provider.website }}"
                                 >
-                                    {{ service_provider.website }}
+                                    {{ service_provider.name }} Website
                                 </a>
                             </p>
                         {% endif %}
@@ -379,7 +409,7 @@
                                     class="default-a ml-5"
                                     href="{{ service_provider.documentation }}"
                                 >
-                                    {{ service_provider.documentation }}
+                                    {{ service_provider.name }} Documentation
                                 </a>
                             </p>
                         {% endif %}
@@ -469,10 +499,61 @@
                         <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
                     {% endif %}
                 </div>
-                <div>
-                    <p class="dashcard-subheader">Researcher {% with researcher.user.user_profile.get_location as location %}{% if location %} | Location: {{ location }}{% endif %}{% endwith %} </p>
-                </div>
-                <div><p class="dashcard-description description-sm">{% if researcher.description %}{{ researcher.description }}{% else %} No description provided. {% endif %}</p></div>
+                <p class="dashcard-subheader">
+                    Researcher {% with researcher.user.user_profile.get_location as location %}{% if location %} | Location: {{ location }}{% endif %}{% endwith %}
+                </p>
+                <p class="dashcard-description description-sm">
+                    {% if researcher.description %}{{ researcher.description }}{% else %} No description provided.{% endif %}
+                </p>
+                {% if researcher.website or researcher.orcid %}
+                    <div class="flex-this mt-8 description-sm">
+                        {% if researcher.orcid %}
+                            <div class="flex-this" itemscope itemtype="https://schema.org/Person">
+                                <img
+                                    loading="lazy"
+                                    class="m-auto ml-0 mr-5"
+                                    src="https://orcid.org/sites/default/files/images/orcid_16x16.png"
+                                    width="16px"
+                                    height="16px"
+                                    alt="ORCID iD icon"
+                                >
+                                <a
+                                    class="default-a flex-this"
+                                    itemprop="sameAs"
+                                    target="orcid.widget"
+                                    rel="me noopener noreferrer"
+                                    style="width: max-content;"
+                                    {% if 'https://sandbox.orcid.org/' in researcher.orcid or 'https://orcid.org/' in researcher.orcid %}
+                                        content="{{ researcher.orcid }}"
+                                        href="{{ researcher.orcid }}"
+                                    {% elif 'X' in researcher.orcid %}
+                                        content="https://sandbox.orcid.org/{{ researcher.orcid }}"
+                                        href="https://sandbox.orcid.org/{{ researcher.orcid }}"
+                                    {% else %}
+                                        content="https://orcid.org/{{ researcher.orcid }}"
+                                        href="https://orcid.org/{{ researcher.orcid }}"
+                                    {% endif %}
+                                >
+                                    {% if 'https://sandbox.orcid.org/' in researcher.orcid or 'https://orcid.org/' in researcher.orcid %}{{ researcher.orcid }}
+                                    {% elif 'X' in researcher.orcid %}https://sandbox.orcid.org/{{ researcher.orcid }}
+                                    {% else %}https://orcid.org/{{ researcher.orcid }}{% endif %}
+                                </a>
+                            </div>
+                        {% endif %}
+
+                        {% if researcher.website %}
+                            <p class="mt-0 mb-0 ml-16">
+                                <i class="fa-solid fa-globe" title="Website"></i>
+                                <a
+                                    class="default-a ml-5"
+                                    href="{{ researcher.website }}"
+                                >
+                                    {% firstof researcher.user.get_full_name researcher.user.username %} Website
+                                </a>
+                            </p>
+                        {% endif %}
+                    </div>
+                {% endif %}
                 {% include 'partials/_alerts.html' %}
             </div>
 
