Updated community creation process

--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -170,7 +170,7 @@
                 <a
                     id="community-boundary-continue-btn"
                     class="primary-btn action-btn disabled-btn"
-                    href="{% url 'confirm-community' %}"
+                    href="{% url 'dashboard' %}"
                     onclick="setboundary(); event.preventDefault()"
                 >
                     Confirm location <i class="fa fa-arrow-right"></i>
@@ -178,7 +178,7 @@
                 </a>
             </div>
             <div class="mr-8" id="skip-this-step">
-                <a class="primary-btn white-btn" href="{% url 'confirm-community' %}">Skip this step <i class="fa fa-arrow-right"></i></a>
+                <a class="primary-btn white-btn" href="{% url 'dashboard' %}">Skip this step <i class="fa fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
