--- a/templates/communities/community-boundary.html
+++ b/templates/communities/community-boundary.html
@@ -100,7 +100,7 @@
                 </a>
             </div>
             <div class="mr-8" id="skip-this-step">
-                <a class="primary-btn white-btn" href="{% url 'confirm-community' %}">Skip this step <i class="fa fa-arrow-right"></i></a>
+                <a class="primary-btn white-btn" href="{% url 'dashboard' %}">Skip this step <i class="fa fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
