--- a/templates/boundary/upload-boundary-file.html
+++ b/templates/boundary/upload-boundary-file.html
@@ -191,14 +191,14 @@
                 <a
                     id="community-boundary-continue-btn"
                     class="primary-btn action-btn disabled-btn"
-                    href="{% url 'confirm-community' %}"
+                    href="{% url 'dashboard' %}"
                     onclick="updateBoundaryInformation(); event.preventDefault()"
                 >
                     Confirm location <i class="fa fa-arrow-right"></i>
                 </a>
             </div>
             <div class="mr-8" id="skip-this-step">
-                <a class="primary-btn white-btn" href="{% url 'confirm-community' %}">Skip this step <i class="fa fa-arrow-right"></i></a>
+                <a class="primary-btn white-btn" href="{% url 'dashboard' %}">Skip this step <i class="fa fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
