feat: updated native-land dropdown resource

--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -255,18 +255,19 @@
     let BoundaryPayLoad = {}
     let InitialShareBoundaryPublicly = {% if entity.share_boundary_publicly %}true{% else %}false{% endif %}
 
-    fetch('https://native-land.ca/wp-json/nativeland/v1/map-list').then(resp => resp.json()).then(response => {
+    fetch('https://raw.githubusercontent.com/biocodellc/localcontexts_json/main/data/nativeland_slug_name_list.json').
+    then(resp => resp.json()).then(response => {
 
     document.querySelector('.region-container input.search').addEventListener("keyup", (event) => {
         let html = ''
         const textInput = event.target.value
         const inputLength = textInput.length
         if (inputLength >= 3) {
-            var results = response.filter(item => item.post_title.toLowerCase().indexOf(textInput.toLowerCase()) > -1);
+            var results = response.filter(item => item.name.toLowerCase().indexOf(textInput.toLowerCase()) > -1);
             results.forEach(result => {
             html += `
-                <div class="result-item" data-slug="${result.slug}" data-title="${result.post_title}" onclick="selectSlug(this)">
-                ${result.post_title}</br />
+                <div class="result-item" data-slug="${result.slug}" data-title="${result.name}" onclick="selectSlug(this)">
+                ${result.name}</br />
                 </div>
             `
             })
