--- a/templates/account_settings_pages/_connect-service-provider.html
+++ b/templates/account_settings_pages/_connect-service-provider.html
@@ -89,46 +89,55 @@
             </div>
 
             <div class="w-15">
-                {% if institution.is_subscribed or researcher.is_subscribed or community.is_approved %}
-                    {% if not service_provider.certification_type == 'manual'%}
-                        <button
-                            name="connectServiceProviderbtn"
-                            class="primary-btn action-btn w-100"
-                            data-name="{{ service_provider.name }}"
-                            data-id="{{ service_provider.id }}"
-                        >
-                            Connect <i class="fa-solid fa-link-simple"></i>
-                        </button>
-                    {% elif service_provider.certification_type == 'manual' %}
-                        <a
-                            class="primary-btn action-btn w-100"
-                            href="{{ service_provider.documentation }}"
-                            target="_blank"
-                        >
-                            More Info <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
-                        </a>
-                    {% endif %}
-                {% else %}
-                    {% if not service_provider.certification_type == 'manual'%}
-                        <div class="btn-with-helptext">
-                            <a
-                                class="primary-btn disabled-btn w-100"
+                {% if envi != 'SANDBOX' %}
+                    {% if institution.is_subscribed or researcher.is_subscribed or community.is_approved %}
+                        {% if not service_provider.certification_type == 'manual'%}
+                            <button
+                                name="connectServiceProviderbtn"
+                                class="primary-btn action-btn w-100"
+                                data-name="{{ service_provider.name }}"
+                                data-id="{{ service_provider.id }}"
                             >
                                 Connect <i class="fa-solid fa-link-simple"></i>
+                            </button>
+                        {% elif service_provider.certification_type == 'manual' %}
+                            <a
+                                class="primary-btn action-btn w-100"
+                                href="{{ service_provider.documentation }}"
+                                target="_blank"
+                            >
+                                More Info <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
                             </a>
-                            <span class="btn-help-text">
-                                Your account needs to be {% if community %}confirmed{% else %}subscribed{% endif %} to connect to Service Providers.
-                            </span>
-                        </div>
-                    {% elif service_provider.certification_type == 'manual' %}
-                        <a
-                            class="primary-btn action-btn w-100"
-                            href="{{ service_provider.documentation }}"
-                            target="_blank"
-                        >
-                            More Info <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
-                        </a>
+                        {% endif %}
+                    {% else %}
+                        {% if not service_provider.certification_type == 'manual'%}
+                            <div class="btn-with-helptext">
+                                <a class="primary-btn disabled-btn w-100">
+                                    Connect <i class="fa-solid fa-link-simple"></i>
+                                </a>
+                                <span class="btn-help-text">
+                                    Your account needs to be {% if community %}confirmed{% else %}subscribed{% endif %} to connect to Service Providers.
+                                </span>
+                            </div>
+                        {% elif service_provider.certification_type == 'manual' %}
+                            <a
+                                class="primary-btn action-btn w-100"
+                                href="{{ service_provider.documentation }}"
+                                target="_blank"
+                            >
+                                More Info <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
+                            </a>
+                        {% endif %}
                     {% endif %}
+                {% else %}
+                    <div class="btn-with-helptext">
+                        <a class="primary-btn disabled-btn w-100">
+                            Connect <i class="fa-solid fa-link-simple"></i>
+                        </a>
+                        <span class="btn-help-text">
+                            Connecting to Service Providers is not available in the Sandbox.
+                        </span>
+                    </div>
                 {% endif %}
             </div>
         </div>
