--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static %} {% load custom_api_tags %}
 <style>
     .region-container{
         margin-top: 20px;
@@ -230,7 +230,7 @@
 <script>
     let BoundaryPayLoad = {}
 
-    fetch('https://raw.githubusercontent.com/biocodellc/localcontexts_json/main/data/nativeland_slug_name_list.json').
+    fetch('{% external_api "https://raw.githubusercontent.com/biocodellc/localcontexts_json/main/data/nativeland_slug_name_list.json" %}').
     then(resp => resp.json()).then(response => {
 
     document.querySelector('.region-container input.search').addEventListener("keyup", (event) => {
