--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -256,20 +256,19 @@
                 document.querySelector("#community-boundary-continue-btn .fa-spinner").classList.remove("spinner-container");
                 document.getElementById("community-boundary-continue-btn").classList.remove("disabled-btn");
 
-                if (boundaryData.length === 0) {
+                if (boundaryData.coordinates.length === 0 && boundaryData.coordinates[0].length) {
                     const errorMessage = 'Selected location does not have any Native Land boundary'
                     alert(errorMessage)
                     throw new Error(errorMessage)
                 }
-
-                const boundary = boundaryData[0]
-                const boundaryCoordinates = boundary.geometry.coordinates[0]
+              
+                const boundaryCoordinates = boundaryData.coordinates[0][0]
                 // reorder so (lon, lat)'s become (lat, lon)'s
                 boundaryCoordinates.map(row=>row.reverse())
 
                 const payload = {
-                    source: boundary.properties.description,
-                    name: boundary.properties.Name,
+                    source: boundaryData.description,
+                    name: slug,
                     boundary: boundaryCoordinates,
                     share_boundary_publicly: document.getElementById("share-boundary-publicly").checked
                 }
