Updated code to add asterick

--- a/templates/communities/create-community.html
+++ b/templates/communities/create-community.html
@@ -78,7 +78,7 @@
 
         <div class="w-100">
             <div class="pad-top-1-5">
-                <label>Community Description</label>
+                <label>Community Description<span class="orange-text required-label" title="">*</span></label>
 
                 <div class="tooltip">i
                     <span class="tooltiptext">A community description allows you to share key public information about your community or community organization.</span>
